--- a/.releaserc
+++ b/.releaserc
@@ -1,12 +1,6 @@
 {
   "$schema": "https://json.schemastore.org/semantic-release.json",
-  "branches": [
-    "main",
-    {
-      "name": "next",
-      "prerelease": true
-    }
-  ],
+  "branches": ["main"],
   "plugins": [
     [
       "@semantic-release/commit-analyzer", {
