chore: replace semantic extension

--- a/.releaserc
+++ b/.releaserc
@@ -28,7 +28,7 @@
     "@semantic-release/release-notes-generator",
     "@semantic-release/changelog",
     [
-      "@google/semantic-release-replace-plugin", {
+      "semantic-release-replace-plugin", {
       "replacements": [
         {
           "files": ["style.css"],
