--- a/package.json
+++ b/package.json
@@ -47,7 +47,6 @@
   "devDependencies": {
     "@commitlint/cli": "^18.4.3",
     "@commitlint/config-conventional": "^18.4.3",
-    "@google/semantic-release-replace-plugin": "^1.2.7",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
     "@wordpress/i18n": "^4.46.0",
@@ -57,7 +56,8 @@
     "npm-run-all": "^4.1.5",
     "rimraf": "^5.0.5",
     "sass": "^1.69.5",
-    "semantic-release": "^22.0.8"
+    "semantic-release": "^22.0.8",
+    "semantic-release-replace-plugin": "^1.2.7"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": "yarn lint:js --fix",
