chore: setup block environment

--- a/package.json
+++ b/package.json
@@ -40,27 +40,53 @@
     "lint:js": "wp-scripts lint-js --no-error-on-unmatched-pattern",
     "packages-update": "wp-scripts packages-update",
     "zip": "wp-scripts plugin-zip",
+    "prestart": "yarn clean",
     "start": "run-p --print-label start:*",
     "start:blocks": "wp-scripts start",
-    "start:styles": "sass --watch --no-source-map assets/scss:assets/css",
+    "start:styles": "sass --watch assets/scss:assets/css",
+    "create-block": "./scripts/create-block",
     "prei18n": "yarn build",
     "i18n": "wp i18n make-pot . languages/usm.pot",
     "i18n:json": "wp i18n make-json languages --no-purge --pretty-print"
+  },
+  "dependencies": {
+    "@wordpress/block-editor": "^12.16.0",
+    "@wordpress/blocks": "^12.25.0",
+    "@wordpress/components": "^25.14.0",
+    "@wordpress/core-data": "^6.25.0",
+    "@wordpress/data": "^9.18.0",
+    "@wordpress/editor": "^13.25.0",
+    "@wordpress/i18n": "^4.48.0",
+    "dompurify": "^3.0.6",
+    "lodash": "^4.17.21",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^18.4.3",
     "@commitlint/config-conventional": "^18.4.3",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
-    "@wordpress/i18n": "^4.46.0",
-    "@wordpress/scripts": "^26.17.0",
+    "@types/dompurify": "^3.0.5",
+    "@types/lodash": "^4.14.202",
+    "@types/wordpress__block-editor": "^11.5.9",
+    "@types/wordpress__blocks": "^12.5.13",
+    "@types/wordpress__editor": "^13.6.7",
+    "@typescript-eslint/eslint-plugin": "^6.17.0",
+    "@typescript-eslint/parser": "^6.17.0",
+    "@wordpress/scripts": "^26.19.0",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.29.1",
     "husky": "^8.0.3",
-    "lint-staged": "^15.1.0",
+    "lint-staged": "^15.2.0",
     "npm-run-all": "^4.1.5",
+    "prettier": "^3.1.1",
     "rimraf": "^5.0.5",
-    "sass": "^1.69.5",
-    "semantic-release": "^22.0.8",
-    "semantic-release-replace-plugin": "^1.2.7"
+    "sass": "^1.69.7",
+    "semantic-release": "^22.0.12",
+    "semantic-release-replace-plugin": "^1.2.7",
+    "typescript": "^5.3.3"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": "yarn lint:js --fix",
