--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@wordpress/core-data": "^6.25.0",
     "@wordpress/data": "^9.18.0",
     "@wordpress/editor": "^13.25.0",
+    "@wordpress/element": "^5.25.0",
     "@wordpress/i18n": "^4.48.0",
     "dompurify": "^3.0.6",
     "lodash": "^4.17.21",
