chore: update eslint and ts config

--- a/.eslintrc
+++ b/.eslintrc
@@ -18,6 +18,17 @@
     "jest": true
   },
   "rules": {
+    "@typescript-eslint/ban-ts-comment": [
+      "error",
+      {
+        "ts-expect-error": {
+          "descriptionFormat": "^: TS\\d+ because .+$"
+        },
+        "ts-ignore": true,
+        "ts-nocheck": true,
+        "ts-check": false
+      }
+    ],
     "@typescript-eslint/explicit-function-return-type": "error",
     "@typescript-eslint/explicit-module-boundary-types": "error",
     "@typescript-eslint/interface-name-prefix": "off",
@@ -44,6 +55,7 @@
         "groups": ["builtin", "external", "parent", "sibling", "index"],
         "newlines-between": "always",
         "alphabetize": {"order": "asc"}
-    }]
+      }
+    ]
   }
 }
