--- a/package.json
+++ b/package.json
@@ -31,9 +31,7 @@
     "prepare": "husky install",
     "clean": "rimraf build assets/css *.zip",
     "prebuild": "yarn clean",
-    "build": "run-p --print-label build:*",
-    "build:scripts": "wp-scripts build",
-    "build:styles": "sass --source-map assets/scss:assets/css",
+    "build": "wp-scripts build",
     "format": "wp-scripts format",
     "lint": "run-s --print-label lint:*",
     "lint:css": "wp-scripts lint-style",
@@ -41,9 +39,7 @@
     "packages-update": "wp-scripts packages-update",
     "zip": "wp-scripts plugin-zip",
     "prestart": "yarn clean",
-    "start": "run-p --print-label start:*",
-    "start:blocks": "wp-scripts start",
-    "start:styles": "sass --watch assets/scss:assets/css",
+    "start": "wp-scripts start",
     "create-block": "./scripts/create-block",
     "prei18n": "yarn build",
     "i18n": "wp i18n make-pot . languages/usm.pot",
@@ -76,18 +72,25 @@
     "@typescript-eslint/eslint-plugin": "^6.17.0",
     "@typescript-eslint/parser": "^6.17.0",
     "@wordpress/scripts": "^26.19.0",
+    "copy-webpack-plugin": "^11.0.0",
+    "css-loader": "^6.8.1",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
+    "fast-glob": "^3.3.2",
     "husky": "^8.0.3",
     "lint-staged": "^15.2.0",
+    "mini-css-extract-plugin": "^2.7.6",
     "npm-run-all": "^4.1.5",
+    "postcss-loader": "^7.3.4",
     "prettier": "^3.1.1",
     "rimraf": "^5.0.5",
     "sass": "^1.69.7",
+    "sass-loader": "^13.3.3",
     "semantic-release": "^22.0.12",
     "semantic-release-replace-plugin": "^1.2.7",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "webpack-fix-style-only-entries": "^0.6.1"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": "yarn lint:js --fix",
