--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "@commitlint/cli": "^18.4.3",
     "@commitlint/config-conventional": "^18.4.3",
     "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/exec": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
     "@types/dompurify": "^3.0.5",
     "@types/lodash": "^4.14.202",
