--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "create-block": "./scripts/create-block",
     "prei18n": "yarn build",
     "i18n": "wp i18n make-pot . languages/usm.pot",
-    "i18n:json": "wp i18n make-json languages --no-purge --pretty-print"
+    "i18n:json": "wp i18n make-json languages --no-purge --pretty-print",
+    "posti18n:json": "./scripts/post-i18n-json"
   },
   "dependencies": {
     "@wordpress/block-editor": "^12.16.0",
